overlap-issue

--- a/public/after_login/new_ui/css/style.css
+++ b/public/after_login/new_ui/css/style.css
@@ -9868,6 +9868,7 @@ background: #f6f9fd;
 
 .fortab #myTabs , .fortab #myTab {
     padding-left: 2px!important;
+    z-index: 9;
 }
  
 
